# SFMLSnake

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.hpp  cell.cpp  cell.hpp  celltype.hpp  game.cpp  game.hpp  main.cpp  snake.cpp  snake.hpp  snakeDirection.hpp  snakeIndex.cpp  snakeIndex.hpp  window.cpp  window.hpp
src/: board.hpp  cell.hpp  game.cpp  snakeIndex.cpp  snakeIndex.hpp
